# rust-devbox

./: .gitignore  .rustc_info.json  Cargo.toml  Makefile  readme.md
src/: compounds.rs  cor.rs  loops.rs  lorem1.html  main.rs  matches.rs  merge-collections.rs  mongo.rs  reqs.rs  sql.rs  web.rs  win11.rs  xmls.rs
src/cor/: clone_copy_move.rs  collect.rs  compounds.rs  condolee.rs  dates_times.rs  dbss_ex.rs  emojis.rs  funcs.rs  gene.rs  loops.rs  m_chars.rs  m_enums.rs  m_io.rs  m_match.rs  m_traits.rs  main3.rs  matches.rs  nums.rs  perf_time.rs  queues.rs  reffs.rs  reqs.rs  slices.rs  strs.rs  trait_impl.rs  tuples_m.rs  win11.rs  xmls.rs
src/cor/fs/: fs1.rs  nums_neg_pos.rs
src/cor/my_fs/: lorem.txt
src/my_http/clients/: reqs.rs
src/threads/: channels.rs  child-processes.rs  share-mut-state.rs
