[package]
name = "rust-features"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
error-chain = "0.12.4"
reqwest = { version = "0.11", features = ["json"] }
json = "0.12.4"
postgres = "0.19.3"
curl = "0.4.44"
hyper = "0.14"
mongodb = "2.3.1"

#[dependencies.windows]
#version = "0.36.1"
#features = [
#    "alloc",
#    "Data_Xml_Dom",
#]